--- a/3-learn-tailwindcss/src/index.html
+++ b/3-learn-tailwindcss/src/index.html
@@ -8,9 +8,67 @@
   </head>
   <body>
     <div class="p-5">
-      <h1 class="text-3xl font-serif font-bold text-blue-600">
+      <h1
+        class="text-3xl font-serif lg:font-mono xl:font-sans font-bold text-pink-600 lg:text-sky-600 xl:text-green-400 underline"
+      >
         Min Ga Lar Par
       </h1>
+      <br />
+      <br />
+
+      <div
+        class="mb-40 border-2 border-gray-400 h-[500px] flex flex-col justify-end p-10 gap-10"
+      >
+        <div class="flex justify-start w-full">
+          <div
+            class="bg-blue-600 relative before:border-[10px] before:border-transparent before:absolute before:bottom-0 before:translate-y-full before:border-t-blue-600 before:border-l-blue-600 text-blue-50 px-5 py-2 rounded-lg"
+          >
+            Min nay kaung lar
+          </div>
+        </div>
+        <div class="flex justify-end w-full">
+          <div
+            class="bg-blue-600 relative before:border-[10px] before:border-transparent before:absolute before:bottom-0 before:translate-y-full before:right-5 before:border-t-blue-600 before:border-r-blue-600 text-blue-50 px-5 py-2 rounded-lg"
+          >
+            aye say pal thar gyi
+          </div>
+        </div>
+        <div class="flex justify-start w-full">
+          <div
+            class="bg-blue-600 relative before:border-[10px] before:border-transparent before:absolute before:bottom-0 before:translate-y-full before:border-t-blue-600 before:border-l-blue-600 text-blue-50 px-5 py-2 rounded-lg"
+          >
+            wan thar tal
+          </div>
+        </div>
+        <div class="flex justify-end w-full">
+          <div
+            class="bg-blue-600 relative before:border-[10px] before:border-transparent before:absolute before:bottom-0 before:translate-y-full before:right-5 before:border-t-blue-600 before:border-r-blue-600 text-blue-50 px-5 py-2 rounded-lg"
+          >
+            How are U ?
+          </div>
+        </div>
+      </div>
+
+      <br />
+      <br />
+
+      <div class="border-4 mb-20 border-gray-600 w-80 h-60 relative">
+        <div
+          class="w-20 h-20 bg-purple-500 rounded-full opacity-75 absolute -bottom-10 -right-10 hover:bottom-0 hover:right-0 ease-in-out duration-300 delay-500"
+        ></div>
+
+        <p
+          class="p-5 duration-500 transition-all bg-gray-200 text-base inline-block hover:translate-x-20 hover:text-3xl hover:bg-blue-200"
+        >
+          hello san kyi tar par
+        </p>
+
+        <button
+          class="absolute opacity-75 translate-x-1/2 -translate-y-1/2 right-0 bg-blue-500 text-blue-100 px-4 py-2 rounded-full"
+        >
+          Click Me
+        </button>
+      </div>
     </div>
   </body>
 </html>
