--- a/4-learn-js/basic/index.html
+++ b/4-learn-js/basic/index.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <h1>Learn JavaScript</h1>
-    
-    <script>
-
-        let x = 10;
-        let y = 5;
-
-        console.log(x)
-        console.log(y)
-
-        console.log(x + y)
 
 
-    </script>
 
-</body>
+  <script src="./learn.js"></script>
+  </body>
 </html>
