--- a/4-learn-js/basic/index.html
+++ b/4-learn-js/basic/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Learn JavaScript</h1>
+    <h1 class="my-title" name="my_title">Learn JavaScript</h1>
 
 
 
-  <script src="./learn.js"></script>
+  <script src="./basic.js"></script>
   </body>
 </html>
