--- a/4-learn-js/basic/index.html
+++ b/4-learn-js/basic/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1 class="my-title" name="my_title">Learn JavaScript</h1>
 
-    <script src="./loop.js"></script>
+    <script src="./oopintro.js"></script>
   </body>
 </html>
