--- a/4-learn-js/first-vite/index.html
+++ b/4-learn-js/first-vite/index.html
@@ -14,13 +14,21 @@
       ipsa, aperiam quae magni voluptatum illo quibusdam quis quam, nisi
       voluptas.
     </p>
-    <div class="flex mb-5">
-      <input type="text" class="border border-gray-900" id="taskInput" />
+    <div class="flex mb-5 gap-3">
+      <input
+        type="text"
+        id="taskInput"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        placeholder="Write you task"
+        required
+      />
+
       <button
         id="addBtn"
-        class="bg-gray-900 text-white border border-gray-900 px-3 py-1"
+        type="button"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 text-nowrap font-medium rounded-lg text-sm px-5 py-2.5 me-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
       >
-        Add
+        Add Task
       </button>
     </div>
     <ul id="listGroup"></ul>
