--- a/4-learn-js/dom-projects/invoice-vite/index.html
+++ b/4-learn-js/dom-projects/invoice-vite/index.html
@@ -18,22 +18,21 @@
       </header>
       <section class="">
         <div class="container mb-5">
-          <form class="">
+          <form id="createRecordForm">
             <div class="grid grid-cols-4 gap-3 bg-blue-50 rounded-lg p-5">
               <div class="col-span-2">
                 <label
                   for="countries"
                   class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                  >Select an Product</label
+                  >Select Product</label
                 >
                 <select
-                  id="countries"
+                  required
+                  id="productSelect"
+                  name="product_select"
                   class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                 >
-                  <option selected>Choose a product</option>
-                  <option value="US">Apple</option>
-                  <option value="CA">Orange</option>
-                  <option value="FR">Mango</option>
+                  <option value="" selected>Choose a product</option>
                 </select>
               </div>
               <div class="col-span-1">
@@ -46,6 +45,7 @@
                   <input
                     type="number"
                     id="quantity"
+                    name="quantity"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                     required
                   />
@@ -53,7 +53,7 @@
               </div>
               <div class="col-span-1">
                 <button
-                  type="button"
+                  type="submit"
                   class="w-full h-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
                 >
                   Add Record
@@ -214,69 +214,80 @@
         </div>
       </section>
       <section
-        class="fixed right-0 w-[450px] h-screen bg-white duration-300 shadow"
+        id="productSidebar"
+        class="fixed z-50 translate-x-full right-0 w-[450px] h-screen bg-white shadow"
       >
         <div class="p-4">
-          <div class="mb-5">
-            <h1 class="font-san font-bold text-3xl">Manage Inventory</h1>
-            <p class="text-blue-400">Available Items</p>
+          <div class="flex justify-between items-center mb-5">
+            <div class="">
+              <h1 class="font-san font-bold text-3xl">Manage Inventory</h1>
+              <p class="text-blue-400">Available Items</p>
+            </div>
+            <button id="closeSidebarBtn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 pointer-events-none"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6 18 18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
           </div>
-          <div class="flex flex-col gap-3 mb-5">
-            <div class="border rounded-lg p-3 flex justify-between">
-              <h3>Apple</h3>
-              <p>500 mmk</p>
-            </div>
+          <div class="flex flex-col gap-3 mb-5" id="productGroup"></div>
 
-            <div class="border rounded-lg p-3 flex justify-between">
-              <h3>Apple</h3>
-              <p>500 mmk</p>
-            </div>
-
-            <div class="border rounded-lg p-3 flex justify-between">
-              <h3>Apple</h3>
-              <p>500 mmk</p>
-            </div>
-          </div>
-
-          <div class="p-3 bg-blue-50 rounded-lg">
-            <div class="grid gap-3 grid-cols-3 grid-rows-2">
-              <div class="col-span-3">
-                <div>
-                  <label
-                    for="first_name"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >New Product Name</label
+          <div class="p-5 bg-blue-50 rounded-lg">
+            <form action="" id="productCreateForm">
+              <div class="grid gap-5 grid-cols-3 grid-rows-2">
+                <div class="col-span-3">
+                  <div>
+                    <label
+                      for="first_name"
+                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >New Product Name</label
+                    >
+                    <input
+                      type="text"
+                      id="newProductName"
+                      name="new_product_name"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-span-2">
+                  <div>
+                    <label
+                      for="first_name"
+                      class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
+                      >New Product Price</label
+                    >
+                    <input
+                      type="number"
+                      id="newProductPrice"
+                      name="new_product_price"
+                      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                      required
+                    />
+                  </div>
+                </div>
+                <div class="col-span-1">
+                  <button
+                    type="button"
+                    id="addNewProductBtn"
+                    class="w-full h-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
                   >
-                  <input
-                    type="text"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    required
-                  />
+                    Add
+                  </button>
                 </div>
               </div>
-              <div class="col-span-2">
-                <div>
-                  <label
-                    for="first_name"
-                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white"
-                    >New Product Price</label
-                  >
-                  <input
-                    type="number"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="col-span-1">
-                <button
-                  type="button"
-                  class="w-full h-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
-                >
-                  Add
-                </button>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </section>
@@ -284,6 +295,7 @@
         <div class="container py-3">
           <div class="flex justify-end gap-3">
             <button
+              id="manageInventoryBtn"
               type="button"
               class="px-3 py-2 text-xs font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
             >
@@ -298,6 +310,12 @@
           </div>
         </div>
       </footer>
+      <template id="productCardTemplate">
+        <div class="product-card border rounded-lg p-3 flex justify-between">
+          <h3 class="product-name">Apple</h3>
+          <p><span class="product-price"></span> mmk</p>
+        </div>
+      </template>
     </main>
     <script type="module" src="/main.js"></script>
   </body>
