finish : finalize react

--- a/5-react/16-finalzie-react/index.html
+++ b/5-react/16-finalzie-react/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,12 +9,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
-      "use strict";
-      // function sum(a, a) {
-      //   // Error: duplicate parameter name not allowed
-      //   return a + a;
-      // }
-    </script>
   </body>
 </html>
